Fixed navmenu on mobile and some styling

--- a/public/header.css
+++ b/public/header.css
@@ -35,7 +35,7 @@
     margin-top: auto;
     font-weight: 600;
     font-size: 64px; 
-    font-family: fantasy;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: lighter;
 }
   
